--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -20,13 +20,11 @@
       <!-- <span class="fs-16" mat-menu-item><mat-icon>login</mat-icon>{{'Nombre: '}}<strong>{{ sNombre }}</strong> </span> -->
       <span class="fs-16" mat-menu-item>{{'Nombre: '}}<strong>{{ sNombre }}</strong> </span>
 
-
       <div class="container float-left">
         <div class="row">
           <button (click)="EliminaSesion()" class="btnLogout btn">Cerrar Sesión</button>
         </div>
       </div>
-
 
     </mat-menu>
   </div>
@@ -54,7 +52,8 @@
             class="font_side">Estado de cuenta</span></a>
         <a mat-list-item [routerLink]="['/distribuidores/ventasclientearticulo/']"
           routerLinkActive="active-list-item"><span class="font_side">Ventas por artículo</span></a>
-        <!-- <a mat-list-item [routerLink]="['/distribuidores/guias/']" routerLinkActive="active-list-item"><span class="font_side">Consulta guías </span></a> -->
+        <!-- <a mat-list-item [routerLink]="['/distribuidores/guias/']" routerLinkActive="active-list-item"><span class="font_side">Consulta guías</span></a> -->
+        <!-- <a mat-list-item [routerLink]="['/distribuidores/ordnretorno/']" routerLinkActive="active-list-item"><span class="font_side">Ordenes de Retorno</span></a> -->
         <a mat-list-item [routerLink]="['/catalogointeractivo/']" routerLinkActive="active-list-item"><span
             class="font_side_ic">Catálogo interactivo </span></a>
       </mat-nav-list>
@@ -84,10 +83,14 @@
             class="font_side">Reporte de ventas</span></a>
         <a mat-list-item [routerLink]="['/asesores/consultainactivos/']" routerLinkActive="active-list-item"><span
             class="font_side">Consulta de inactivos</span></a>
+        <!--
         <a mat-list-item [routerLink]="['/asesores/guias/']" routerLinkActive="active-list-item"><span
-            class="font_side">Consulta de guías </span></a>
+            class="font_side">Consulta de guías</span></a>
+        <a mat-list-item [routerLink]="['/asesores/ordnretorno/']" routerLinkActive="active-list-item"><span
+            class="font_side">Ordenes de Retorno</span></a>        
         <a mat-list-item [routerLink]="['/catalogointeractivo/']" routerLinkActive="active-list-item"><span
             class="font_side_ic">Catálogo interactivo </span></a>
+        -->
       </mat-nav-list>
     </mat-sidenav>
 
