--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -54,8 +54,8 @@
           routerLinkActive="active-list-item"><span class="font_side">Ventas por artículo</span></a>
         <!-- <a mat-list-item [routerLink]="['/distribuidores/guias/']" routerLinkActive="active-list-item"><span class="font_side">Consulta guías</span></a> -->
         <!-- <a mat-list-item [routerLink]="['/distribuidores/ordnretorno/']" routerLinkActive="active-list-item"><span class="font_side">Ordenes de Retorno</span></a> -->
-        <a mat-list-item [routerLink]="['/catalogointeractivo/']" routerLinkActive="active-list-item"><span
-            class="font_side_ic">Catálogo interactivo </span></a>
+        <!-- <a mat-list-item [routerLink]="['/catalogointeractivo/']" routerLinkActive="active-list-item"><span
+            class="font_side_ic">Catálogo interactivo </span></a> -->
       </mat-nav-list>
 
       <mat-nav-list *ngIf="!bCliente" nav-list (click)="toggle(snav)">
@@ -83,6 +83,8 @@
             class="font_side">Reporte de ventas</span></a>
         <a mat-list-item [routerLink]="['/asesores/consultainactivos/']" routerLinkActive="active-list-item"><span
             class="font_side">Consulta de inactivos</span></a>
+        <a mat-list-item [routerLink]="['/asesores/listacfdis/']" routerLinkActive="active-list-item"><span
+            class="font_side">Descargar CFDIs</span></a>
         <!--
         <a mat-list-item [routerLink]="['/asesores/guias/']" routerLinkActive="active-list-item"><span
             class="font_side">Consulta de guías</span></a>
